<resources>
    <string name="app_name">Masterfax</string>
    <string name="splash">logo</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="Ename">Ename</string>
    <string name="Epassword">Epassword</string>
    <string name="Submit">Submit</string>
    <string name="Regtxt">Register</string>
    <string name="email">Email</string>
    <string name="EEmail">EEmail</string>
    <string name="NewAccount">Create an Account</string>
    <string name="login">Login</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Account_Exsist">Acount Already Exsist</string>
    <string name="menu_home">Home</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_products">Products</string>
    <string name="menu_services">Services</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_bookapointment">Book Appointment</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_first_page">MasterFax</string>
    <string name="sign_in">Sign in</string>

    <string name="signin_name">Name</string>
    <string name="signin_password">Password</string>
    <string name="signin_Submit">Submit</string>

    <string name="signin_Tname">Name</string>
    <string name="signin_Tpassword">Password</string>
    <string name="signin_TSubmit">Submit</string>

    <string name="Logout">Logout</string>
    <string name="fp">Forgot Password</string>

    <string name="reset">Password Reset</string>
    <string name="Profilepic">Profile pic</string>
    <string name="navname">Name</string>
    <string name="navmail">Mail</string>
    <string name="navimageview">imageview</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>

</resources>
