<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_aboutus"
            android:icon="@drawable/aboutus"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/menu_products"
            android:icon="@drawable/products"
            android:title="@string/menu_products" />

        <item
            android:id="@+id/menu_services"
            android:icon="@drawable/services"
            android:title="@string/menu_services" />

        <item
            android:id="@+id/menu_contact_us"
            android:icon="@drawable/contactus"
            android:title="@string/menu_contact_us" />

        <item
            android:id="@+id/menu_bookapointment"
            android:icon="@drawable/book_appointment"
            android:title="@string/menu_bookapointment" >

        </item>
    </group>

</menu>
