<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bg_header"
        android:layout_width="match_parent"
        android:background="@drawable/header_register"
        android:elevation="5dp"
        android:layout_height="120dp">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/signin_name"
        android:textSize="20sp"
        android:elevation="10dp"
        android:textStyle="bold"
        android:text="@string/sign_in"
        android:textColor="@color/colorwhite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/bg_header"
        android:src="@drawable/circle_loginpage"
        android:layout_marginTop="-5dp"
        android:layout_marginLeft="-25dp"
        />
    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/circle_loginpage"
        android:layout_marginBottom="-30dp"
        android:layout_marginLeft="-80dp"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        android:layout_below="@id/bg_header"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:paddingBottom="50dp">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/name"
                android:textColor="@color/purple"
                android:textStyle="bold"
                android:textSize="14sp">
            </TextView>
            <EditText
                android:id="@+id/Ename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:inputType="text"
                android:layout_marginRight="10dp"
                >
            </EditText>
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/email"
                android:textColor="@color/purple"
                android:textStyle="bold"
                android:textSize="14sp">
            </TextView>
            <EditText
                android:id="@+id/EEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:inputType="textEmailAddress"
                android:layout_marginRight="10dp"
                >
            </EditText>
            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/password"
                android:textColor="@color/purple"
                android:textStyle="bold"
                android:textSize="14sp">
            </TextView>
            <EditText
                android:id="@+id/Epassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:inputType="textPassword"
                android:layout_marginRight="10dp"
                >
            </EditText>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv"
        android:layout_alignRight="@id/cv"
        android:layout_alignLeft="@id/cv"
        android:elevation="10dp"
        android:layout_marginTop="-50dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        >
        <Button
            android:id="@+id/Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SignUp"
            android:textColor="@color/colorwhite"
            android:background="@drawable/btn_login"
            android:textAllCaps="false">
        </Button>
        <TextView
            android:id="@+id/Account_Exsist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account Already Exsist"
            android:layout_below="@id/Submit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            />
    </RelativeLayout>

</RelativeLayout>